Implementamos el listado de canciones en versión mobile

--- a/index.html
+++ b/index.html
@@ -12,36 +12,100 @@
 	</header>
 	<section class="songs-list">
 		<article class="song">
-			<img src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title 1111</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
 			<div class="artist">Song artist</div>
 			<div class="title">Song title</div>
 		</article>
-		<!--
-		<article class="song">Song 2</article>
-		<article class="song">Song 3</article>
-		<article class="song">Song 4</article>
-		<article class="song">Song 5</article>
-		<article class="song">Song 6</article>
-		<article class="song">Song 7</article>
-		<article class="song">Song 8</article>
-		<article class="song">Song 9</article>
-		<article class="song">Song 10</article>
-		<article class="song">Song 11</article>
-		<article class="song">Song 12</article>
-		<article class="song">Song 13</article>
-		<article class="song">Song 14</article>
-		<article class="song">Song 15</article>
-		<article class="song">Song 16</article>
-		<article class="song">Song 17</article>
-		<article class="song">Song 18</article>
-		<article class="song">Song 19</article>
-		<article class="song">Song 20</article>
-		<article class="song">Song 21</article>
-		<article class="song">Song 22</article>
-		<article class="song">Song 23</article>
-		<article class="song">Song 24</article>
-		<article class="song">Song 25</article>
-		-->
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
 	</section>
 </body>
 </html>
