Implementamos versión tablet del listado de canciones (pasa a ser un grid de canciones)

--- a/index.html
+++ b/index.html
@@ -13,8 +13,56 @@
 	<section class="songs-list">
 		<article class="song">
 			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, est reprehenderit reiciendis similique unde dicta illo magnam soluta numquam iste. Qui, fugiat debitis beatae ipsum eos voluptatem consectetur repellat at.</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
 			<div class="artist">Song artist</div>
-			<div class="title">Song title 1111</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
 		</article>
 
 		<article class="song">
@@ -106,6 +154,247 @@
 			<div class="artist">Song artist</div>
 			<div class="title">Song title</div>
 		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+		
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
+		<article class="song">
+			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
+			<div class="artist">Song artist</div>
+			<div class="title">Song title</div>
+		</article>
+
 	</section>
 </body>
 </html>
