--- a/index.html
+++ b/index.html
@@ -7,23 +7,31 @@
 	<meta name="theme-color" content="#8ED7BF">
 	<link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
-<body class="form-shown">
+<body class="songs-list-shown">
 	<header class = "web-header">
 		<h1 class = "web-title">Batmusic</h1>
 	</header>
 
 	<form class = "ui-element new-song-form" novalidate>
+		<div>
 		<label for="artist">Artist</label>
 		<input type="text" id="artist" name="artist" placeholder="Artist" required>
-		
+		</div>
+
+		<div>
 		<label for="title">Title</label>
 		<input type="text" id="title" name="title" name="title" placeholder="Song title" required>
-		
+		</div>
+
+		<div>
 		<label for="audio_url">Audio URL</label>
 		<input type="url" id="audio_url" name="audio_url" name = "audio_url" placeholder="http://..." required="">
+		</div>
 
+		<div>
 		<label for="cover_url">Cover URL</label>
 		<input type="url" id="cover_url" name="cover_url" placeholder="http://...">
+		</div>
 
 		<button>Save song</button>
 
