Configuramos Gulp para concatenar automáticamente JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Batmusica</title>
 	<meta charset="utf-8">
@@ -7,7 +8,8 @@
 	<meta name="theme-color" content="#8ED7BF">
 	<link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
-<body class="songs-list-shown">
+
+<body class="form-shown">
 	<header class = "web-header">
 		<h1 class = "web-title">Batmusic</h1>
 	</header>
@@ -421,7 +423,8 @@
 			<div class="artist">Song artist</div>
 			<div class="title">Song title</div>
 		</article>
-
 	</section>
+	
+	<script type="text/javascript" src="dist/js/app.js"></script>
 </body>
 </html>
