Refactorizamos para reutilizar la carga de canciones cuando creamos una canción

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 	<link rel="stylesheet" type="text/css" href="dist/css/style.css">
 </head>
 
-<body class="form-shown">
+<body class="songs-list-shown">
 	<header class = "web-header">
+		<img class="add-icon" src="src/img/icon-add.png" title="Add song" alt="Add icon">
 		<h1 class = "web-title">Batmusic</h1>
 	</header>
 
@@ -40,389 +41,7 @@
 	</form>
 
 	<section class="ui-element songs-list">
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, est reprehenderit reiciendis similique unde dicta illo magnam soluta numquam iste. Qui, fugiat debitis beatae ipsum eos voluptatem consectetur repellat at.</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
 		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-		
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
-
-		<article class="song">
-			<img class="cover" src="https://image.freepik.com/free-icon/cd-rom_318-9291.jpg">
-			<div class="artist">Song artist</div>
-			<div class="title">Song title</div>
-		</article>
 	</section>
 	
 	<script type="text/javascript" src="dist/js/app.js"></script>
