--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
 
 	<form class = "ui-element new-song-form" novalidate>
 		<div>
-		<label for="artist">Artist</label>
-		<input type="text" id="artist" name="artist" placeholder="Artist" required>
+			<label for="artist">Artist</label>
+			<input type="text" id="artist" name="artist" placeholder="Artist" required>
 		</div>
 
 		<div>
-		<label for="title">Title</label>
-		<input type="text" id="title" name="title" name="title" placeholder="Song title" required>
+			<label for="title">Title</label>
+			<input type="text" id="title" name="title" name="title" placeholder="Song title" required>
 		</div>
 
 		<div>
-		<label for="audio_url">Audio URL</label>
-		<input type="url" id="audio_url" name="audio_url" name = "audio_url" placeholder="http://..." required="">
+			<label for="audio_file">Audio URL</label>
+			<div id = "audio_file" class = "drop-zone" filetype="audio/.+">Drop here your audio file</div>
 		</div>
 
 		<div>
-		<label for="cover_url">Cover URL</label>
-		<input type="url" id="cover_url" name="cover_url" placeholder="http://...">
+			<label for="cover_file">Cover URL (optional)</label>
+			<div id = "cover_file" class = "drop-zone" filetype="image/.+">Drop here your cover URL file</div>
 		</div>
 
 		<button>Save song</button>
