--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 <body class="songs-list-shown">
 	<header class = "web-header">
-		<img class="add-icon" src="src/img/icon-add.png" title="Add song" alt="Add icon">
+		<!-- <img class="add-icon" src="src/img/icon-add.png" title="Add song" alt="Add icon"> -->
+		<span class ="sprite icon-add add-icon" title="Add song"></span>
 		<h1 class = "web-title">Batmusic</h1>
 	</header>
 
